; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_pmu.c_perf_pmu__config.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_pmu.c_perf_pmu__config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_pmu = type { i32, i32 }
%struct.perf_event_attr = type { i32 }
%struct.list_head = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @perf_pmu__config(%struct.perf_pmu* %0, %struct.perf_event_attr* %1, %struct.list_head* %2) #0 {
  %4 = alloca %struct.perf_pmu*, align 8
  %5 = alloca %struct.perf_event_attr*, align 8
  %6 = alloca %struct.list_head*, align 8
  store %struct.perf_pmu* %0, %struct.perf_pmu** %4, align 8
  store %struct.perf_event_attr* %1, %struct.perf_event_attr** %5, align 8
  store %struct.list_head* %2, %struct.list_head** %6, align 8
  %7 = load %struct.perf_pmu*, %struct.perf_pmu** %4, align 8
  %8 = getelementptr inbounds %struct.perf_pmu, %struct.perf_pmu* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.perf_event_attr*, %struct.perf_event_attr** %5, align 8
  %11 = getelementptr inbounds %struct.perf_event_attr, %struct.perf_event_attr* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.perf_pmu*, %struct.perf_pmu** %4, align 8
  %13 = getelementptr inbounds %struct.perf_pmu, %struct.perf_pmu* %12, i32 0, i32 0
  %14 = load %struct.perf_event_attr*, %struct.perf_event_attr** %5, align 8
  %15 = load %struct.list_head*, %struct.list_head** %6, align 8
  %16 = call i32 @perf_pmu__config_terms(i32* %13, %struct.perf_event_attr* %14, %struct.list_head* %15)
  ret i32 %16
}

declare dso_local i32 @perf_pmu__config_terms(i32*, %struct.perf_event_attr*, %struct.list_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
